[tool.poetry]
name = "durdle"
version = "0.1.0"
description = "Discord wordle bot"
authors = ["Devansh Singh <devanshamity@gmail.com>", "Kshitij Kapoor <>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^1.7.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
mypy = "^0.931"
discord-py-slash-command = "^3.0.3"
pymongo = {extras = ["srv"], version = "^4.0.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
