[tool.poetry]
name = "durdle"
version = "0.1.0"
description = "Durdle - Wordle discord bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
mypy = "^0.931"
discord-py-slash-command = "^3.0.3"
asyncio = "^3.4.3"
pyenchant = "^3.2.2"
pymongo = {extras = ["srv"], version = "^4.0.1"}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
requests = "^2.27.1"
types-requests = "^2.27.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
