[tool.poetry]
name = "durdle"
version = "0.1.0"
description = "Durdle - Wordle based Discord bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
pymongo = {extras = ["srv"], version = "^4.0.1"}
pyspellchecker = "^0.6.3"
asyncio = "^3.4.3"
mypy = "^0.942"
requests = "^2.27.1"
types-requests = "^2.27.8"
aiodns = "^3.0.0"
brotlipy = "^0.7.0"
cchardet = "^2.1.7"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
